--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<embed src="https://nups2397.github.io/Nupur_Parikh_5.8_Portfolio.pdf" width="100%" height="850px"/>
+<embed src="https://nups2397.github.io/Nupur_Parikh_5.8_Portfolio" width="100%" height="850px"/>
